update template conf and approved coins

--- a/configs/approved_coins.json
+++ b/configs/approved_coins.json
@@ -1,1 +1,1 @@
-["BTC", "ETH", "BNB", "XRP", "SOL", "TRX", "DOGE", "ADA", "BCH", "XMR", "LINK", "HYPE", "CC", "XLM", "ZEC", "LTC", "SUI", "AVAX", "SHIB", "HBAR", "TON", "CRO", "DOT", "UNI", "XAUT", "MNT"]
+["BTC","ETH","XRP","BNB","SOL","TRX","BCH","ADA","HYPE","LINK","XMR","XLM","HBAR","LTC","AVAX","SUI","TON","XAUT","UNI","DOT"]
